--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 layout: default
 ---
 
+<div class="center">
+  <h1>CURRENTLY UNDER CONSCRUCTION</h1>
+  <h3>Hold Your Horses!</h3>
+</div>
+
 <div class="home">
 
   <div class="work">
