--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 class: index-main
 ---
 
-<div class="col-6 float-right">
+<div class="col-4 hidden-sm-down">
   <h1>CURRENTLY UNDER CONSCRUCTION</h1>
   <h3>Hold Your Horses!</h3>
 </div>
