--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+class: index-main
 ---
 
-<div class="center">
+<div class="col-6 float-right hidden-sm-down">
   <h1>CURRENTLY UNDER CONSCRUCTION</h1>
   <h3>Hold Your Horses!</h3>
 </div>
