bootstrap not working

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ class: index-main
 ---
 
 <div class="col-4 hidden-sm-down">
+  <h1>This should be hidden for sm screens!</h1>
   <h1>CURRENTLY UNDER CONSCRUCTION</h1>
   <h3>Hold Your Horses!</h3>
 </div>
