--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 class: index-main
 ---
 
-<div class="col-6 float-right hidden-sm-down">
+<div class="col-6 hidden-sm-down">
+  <h1>This should be hidden for sm screens!</h1>
   <h1>CURRENTLY UNDER CONSCRUCTION</h1>
   <h3>Hold Your Horses!</h3>
 </div>
