--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ class: index-main
 <div class="home">
 
   <div class="work">
-    <h2>My Work</h2>
+    <h1>Projects</h1>
     {% for project in site.portfolio limit:5 %}
     <div class="project">
       <div class="project-thumb">
@@ -15,8 +15,8 @@ class: index-main
         </a>
       </div>
       <div class="project-description">
-        <a href="{{ project.url | prepend: site.baseurl }}"><strong>{{ project.title }}</strong></a>
-        <p>{{ project.short-description }}</p>
+       <a href="{{ project.url | prepend: site.baseurl }}"><strong>{{ project.title }}</strong></a>
+        <h4>{{ project.short-description }}</h4>
       </div>
     </div>
     {% endfor %}
