Add domain grantbackes.com

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@ class: index-main
 
 <div class="home">
 
+  <div class="text-center announcement">
+    <h2>Under Construction</h2>
+    <h3>Hold Your Horses</h3>
+  </div>
+
   <div class="work">
     <h1>Projects</h1>
     {% for project in site.portfolio limit:5 %}
